# stockprice-predictor-10207

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.poetry  Dockerfile.web  README.md  pyproject.toml  requirements.txt
app/: endpoints.py  main.py  metadata.py  workers.py
app/api/: metadata.py  predict.py  predict_plotter.py  stock_name.py  train.py
app/libs/: convert.py  models.py  predict.py  stock_name.py  train.py
app/libs/trained_models/: AAPL.joblib  AMD.joblib  AMZN.joblib  APE.joblib  BBY.joblib  BYDDY.joblib  CHPT.joblib  CHWY.joblib  CRWD.joblib  EE.joblib  ENB.joblib  FDX.joblib  FSLR.joblib  GOOG.joblib  GOOGL.joblib  HPQ.joblib  INTC.joblib  JNJ.joblib  KO.joblib  LNG.joblib  MCD.joblib  MDB.joblib  META.joblib  MSFT.joblib  NFLX.joblib  NVDA.joblib  OKTA.joblib  OXY.joblib  PANW.joblib  RKLB.joblib  SNAP.joblib  TELL.joblib  TSLA.joblib  VZ.joblib
app/static/css/: indexstyle.css
app/templates/: README.html
app/templates/homepage/: homepage.html
app/templates/shared/: base.html
app/webpage/: homepage.py
